Implementación implementación de proveedor, compra, comprobante de pago